refactor: ♻️ add roa information to substance query
